<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#e3e3e3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="74dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:singleLine="false"

            android:textSize="14sp" />


        <DatePicker
            android:id="@+id/simpleDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="169dp"
            android:background="@color/lightPrimaryColor"
            android:datePickerMode="spinner" />



        <EditText
            android:id="@+id/telf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="74dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:singleLine="false"

            android:textSize="14sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="74dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="false"

            android:textSize="14sp" />

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="74dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="textLongMessage"
            android:singleLine="false"

            android:textSize="14sp" />


    </LinearLayout>


    <Button
        android:id="@+id/bt_launch_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="siguiente"
        android:textSize="10sp" />

</LinearLayout>